--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "bun run --watch src/index.ts",
-    "start": "bun run src/index.ts",
+    "start": "bun run src/migrate.ts && bun run src/index.ts",
+    "migrate": "bun run src/migrate.ts",
     "seed": "bun run src/seed.ts"
   },
   "module": "src/index.ts",
